# uchidomabot

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cheapshapi/: base.py  client.py  exceptions.py  utils.py
src/cheapshapi/models/: deal.py  game.py  store.py
src/cheapshapi/tests/: test_models.py
src/uchidomabot/: cli.py  set_commands.py
src/uchidomabot/filters/: role.py
src/uchidomabot/handlers/: admin.py  callbacks.py  user.py  utils.py
src/uchidomabot/keyboards/: inline.py
src/uchidomabot/middlewares/: db.py  http_client.py  role.py
src/uchidomabot/services/: repository.py
src/uchidomabot/states/: choose_game.py  settings.py
