[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[project]
name = "tgbot"
version = "0.0.1"
authors = [{ name = "rasput", email = "rasputyashka@gmail.com" }]
description = "IDKWID"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram~=2.21",
    "redis==4.3.*",
    "asyncpg>=0.27.0",
    "pydantic>=1.10.4",
]
[project.optional-dependencies]
test = ["pytest"]
lint = ["flake8"]


[project.urls]
"Homepage" = "https://github.com/rasputyashka/uchidomabot"
"Bug Tracker" = "https://github.com/rasputyashka/uchidomabot/issues"

[project.scripts]
tgbot = "uchidomabot.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 79
